--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span class="word">Vaishnavi Agrawal<span class="superscript"></span> </span>
         <span class="word">Technical Support Engineer</span>
       </h1>
-      <button class="button-54" role="button"><a href="https://drive.google.com/file/d/10iYvaPf88tzVaf0xfTiFvdonQ1q5LlWi/view?usp=sharing">RESUME</a></button>
+      <button class="button-54" role="button"><a href="https://drive.google.com/file/d/1POiExxXcuaRco7p07sR1OLrHwMzDxEOr/view?usp=sharing" target="_blank">RESUME</a></button>
   </div>
     <img id="myPics" src="1666706919212.jpg">
   </div>
@@ -183,8 +183,8 @@
             <h2>Milaap Clone</h2>
           <p>Milaap is India's largest Free crowdfunding platform for personal and social causes.</p>
           <p>Tech Stack: HTML, JavaScript, CSS, GitHub</p>
-          <button class="p-button"><a href="https://github.com/Rajat-Yadav881/truculent-creature-9857.git">GitHub</a></button>
-          <button class="p-button"><a href="https://jocular-duckanoo-47e177.netlify.app/">Live</a></button>
+          <button class="p-button"><a href="https://github.com/Rajat-Yadav881/truculent-creature-9857.git" target="_blank">GitHub</a></button>
+          <button class="p-button"><a href="https://jocular-duckanoo-47e177.netlify.app/" target="_blank">Live</a></button>
           </div>
           
         </div>
@@ -195,8 +195,8 @@
             <h2>Asana Onboarding</h2>
           <p>Asana, Inc., is a web and mobile "work management" platform designed to help teams organize, track, and manage their work.</p>
           <p>Tech Stack Used - HTML,CSS</p>
-          <button  class="p-button"><a href="https://github.com/Saiprasaddabbe/Cricbuzz.com.git">GitHub</a></button>
-          <button  class="p-button"><a href="https://steady-caramel-2a515e.netlify.app/">Live</a></button>
+          <button  class="p-button"><a href="https://github.com/anishsengarr/Asana.git" target="_blank">GitHub</a></button>
+          <button  class="p-button"><a href="https://steady-caramel-2a515e.netlify.app/" target="_blank">Live</a></button>
           </div>
         </div>
           <div id="p1">
@@ -205,8 +205,8 @@
               <h2>Cricinfo Clone</h2>
             <p>ESPN cricinfo is a sports news website exclusively for the game of cricket.  </p>
             <p>Tech Stack Used - HTML, JavaScript DOM, CSS, GitHub</p>
-            <button class="p-button"><a href="https://github.com/VaishnaviAgrawa12/Khaki-Engine-3891.git">GitHub</a></button>
-            <button class="p-button"><a href="https://wonderful-buttercream-1615a7.netlify.app/">Live</a></button>
+            <button class="p-button"><a href="https://github.com/VaishnaviAgrawa12/Khaki-Engine-3891.git" target="_blank">GitHub</a></button>
+            <button class="p-button"><a href="https://wonderful-buttercream-1615a7.netlify.app/" target="_blank">Live</a></button>
             </div>
           </div>
       </div>
@@ -228,8 +228,8 @@
           </p>
         </div>
         <div>
-          <img src="https://img.icons8.com/fluency/3x/github.png" alt="">
-          <img src="https://img.icons8.com/ios-filled/1x/linkedin-circled--v4.gif" alt="">
+          <a href="https://www.linkedin.com/in/vaishnavi-agrawal-0220591b7/" target="_blank"><img src="https://img.icons8.com/glyph-neue/1x/github.png" alt=""></a>
+          <a href="https://github.com/VaishnaviAgrawa12" target="_blank"><img src="https://img.icons8.com/ios-filled/1x/linkedin-circled.png" alt=""></a>
         </div>
       </div>
     </div>
