--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <div class="homeLeft">
 
-      <h3 style="color: #C0C0C0;">Hello I'm</h3>
+      <h3 class="hello" style="color: #C0C0C0;">Hello I'm</h3>
       <h1 id="creek">
        
         <span class="word">Vaishnavi Agrawal<span class="superscript"></span> </span>
