--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <div class="pRight">
             <h2>Milaap Clone</h2>
           <p>Milaap is India's largest Free crowdfunding platform for personal and social causes.</p>
-          <p>Tech Stack: HTML, JavaScript, CSS, GitHub</p>
+          <p>Tech Stack: HTML | JavaScript | CSS</p>
           <button class="p-button"><a href="https://github.com/Rajat-Yadav881/truculent-creature-9857.git" target="_blank">GitHub</a></button>
           <button class="p-button"><a href="https://jocular-duckanoo-47e177.netlify.app/" target="_blank">Live</a></button>
           </div>
@@ -203,7 +203,7 @@
           <div class="pRight">
             <h2>Asana Onboarding</h2>
           <p>Asana, Inc., is a web and mobile "work management" platform designed to help teams organize, track, and manage their work.</p>
-          <p>Tech Stack : HTML,CSS</p>
+          <p>Tech Stack : HTML | CSS | Reveal.js</p>
           <button  class="p-button"><a href="https://github.com/anishsengarr/Asana.git" target="_blank">GitHub</a></button>
           <button  class="p-button"><a href="https://starlit-crisp-ae57ab.netlify.app" target="_blank">Live</a></button>
           </div>
@@ -213,7 +213,7 @@
             <div class="pRight">
               <h2>Cricinfo Clone</h2>
             <p>ESPN cricinfo is a sports news website exclusively for the game of cricket.The site features news, articles, live coverage of cricket matches  </p>
-            <p>Tech Stack :HTML, JavaScript DOM, CSS, GitHub</p>
+            <p>Tech Stack :HTML | JavaScript | CSS</p>
             <button class="p-button"><a href="https://github.com/VaishnaviAgrawa12/Khaki-Engine-3891.git" target="_blank">GitHub</a></button>
             <button class="p-button"><a href="https://wonderful-buttercream-1615a7.netlify.app/" target="_blank">Live</a></button>
             </div>
