--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="about">
       <img src="https://img.freepik.com/premium-vector/girl-programming-programmer-working-female-character-with-laptop-headphones-woman-coding-learning-vector-concept-woman-programmer-programming-laptop-illustration_53562-14474.jpg?w=900" alt="">
       
-      <p>My name is  Vaishnavi Agrawal, Aspiring Technical Support Engineer, strongly interested in providing technical assistance and support to clients in person and remotely. Also have expertise in troubleshooting, strong communication and customer service skills.
+      <p>Aspiring Technical Support Engineer, strongly interested in providing technical assistance and support to clients in person and remotely. Also have expertise in troubleshooting, strong communication and customer service skills.
         
       </p>
     </div>
